--- a/1.md
+++ b/1.md
@@ -12,7 +12,9 @@
 
 终极保镖：http://www.leiba.com/comicinfo/218/
 
+辣妹穿越冒险记：http://www.leiba.com/comicinfo/62/
 
+复活男：http://www.leiba.com/comicinfo/86/
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
