--- a/12.md
+++ b/12.md
@@ -1,6 +1,8 @@
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-占据人生(屌丝替高富帅继续生活): http://m.5177mai.com/list.php?tid=42
+同居，拼房  http://www.vaga.cc/tongju/
+
+如果看到后面要注册，请随便注册一个账号即可，无需收费！
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
