--- a/5.md
+++ b/5.md
@@ -1,6 +1,6 @@
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-可爱的家伙（可爱的女友）:http://m.5177mai.com/list.php?tid=39
+可爱的家伙（可爱的女友）:http://www.930mh.com/manhua/3857/
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
