--- a/4.md
+++ b/4.md
@@ -1,7 +1,9 @@
 
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-偷窥1,2：http://m.5177mai.com/plus/search_m.php?kwtype=0&typeid=70&q=%CD%B5%BF%FA&submit=%CB%D1+%CB%F7
+偷窥1,2：http://www.vaga.cc/toukui/
+
+随意注册个账号即可看
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
