--- a/3.md
+++ b/3.md
@@ -1,6 +1,6 @@
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-爱上男闺蜜、非常关系、h-mate、同居 搜索 h-mate:http://m.5177mai.com/list.php?tid=32
+爱上男闺蜜、非常关系、h-mate、同居 搜索 h-mate:https://www.nuanxinmanhua.com/mh/xe/20.html
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
