--- a/9.md
+++ b/9.md
@@ -1,6 +1,6 @@
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-占据人生(屌丝替高富帅继续生活): http://www.930mh.com/manhua/12829/
+占据人生(屌丝替高富帅继续生活): http://www.vaga.cc/newface/
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
