--- a/11.md
+++ b/11.md
@@ -1,6 +1,6 @@
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-占据人生(屌丝替高富帅继续生活): http://m.5177mai.com/list.php?tid=13
+占据人生(屌丝替高富帅继续生活): http://www.vaga.cc/tjjzf/
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
