--- a/2.md
+++ b/2.md
@@ -1,6 +1,8 @@
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-欲求王：http://m.5177mai.com/list.php?tid=29
+欲求王：http://www.930mh.com/manhua/4586/
+
+会持续更新
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
