--- a/10.md
+++ b/10.md
@@ -1,6 +1,10 @@
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-室友, roommate, 没想到你是这样的老师: http://m.5177mai.com/list.php?tid=95
+室友, roommate, 没想到你是这样的老师: 
+
+http://www.5177mai.com/comic/shiyou/
+
+http://m.5177mai.com/list.php?tid=95
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
