--- a/8.md
+++ b/8.md
@@ -1,6 +1,10 @@
 ！！！如果微信内不能打开，请复制链接到浏览器中浏览
 
-恋爱辅助器、恋爱作弊器：http://www.930mh.com/manhua/7995/
+恋爱辅助器、恋爱作弊器：
+
+http://www.vaga.cc/lafzq/
+或者
+http://www.930mh.com/manhua/7995/
 
 如果不知道名字或者名字不对，也可公众号后台咨询哦
 
